sandc/test/fixtures/astRegression/shouldFail/productions/returnablePseudex/ReturningNonReturnablePseudex.sand
pub class ReturningNonReturnablePseudex {
    foo() {
        return ["foo"; 3];
    }
}